--- a/app/src/main/res/drawable/circular_progress_bar.xml
+++ b/app/src/main/res/drawable/circular_progress_bar.xml
@@ -5,8 +5,8 @@
     <shape
         android:innerRadiusRatio="2.5"
         android:shape="ring"
-        android:thickness="1dp"
-        android:useLevel="true"><!-- this line fixes the issue for lollipop api 21 -->
+        android:thickness="5dp"
+        android:useLevel="true">
 
         <gradient
             android:angle="0"
