--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/black">
 
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -20,7 +21,9 @@
         android:background="@drawable/circular_shape"
         android:indeterminate="false"
         android:progressDrawable="@drawable/circular_progress_bar"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"/>
 
     <TextView
         android:id="@+id/timerText"
@@ -35,16 +38,20 @@
         android:textSize="48sp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/replay"
+        android:id="@+id/replayButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/stop"
-        app:layout_constraintTop_toTopOf="@id/stop"
-        app:layout_constraintStart_toEndOf="@id/stop"
+        app:layout_constraintBottom_toBottomOf="@id/start_stopButton"
+        app:layout_constraintTop_toTopOf="@id/start_stopButton"
+        app:layout_constraintStart_toEndOf="@id/start_stopButton"
         android:layout_marginStart="48dp"
-        android:contentDescription="@string/replay_button" />
+        android:contentDescription="@string/replay_button"
+        android:src="@drawable/ic_replay"
+        android:scaleType="fitXY"
+        app:maxImageSize="30dp"
+        app:fabCustomSize="70dp"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/stop"
+        android:id="@+id/start_stopButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,15 +60,23 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/replay_button"
-        app:layout_constraintVertical_bias="0.7"/>
+        android:src="@drawable/ic_start"
+        app:layout_constraintVertical_bias="0.7"
+        android:scaleType="center"
+        app:maxImageSize="30dp"
+        app:fabCustomSize="70dp"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/pause_play"
+        android:id="@+id/pause_playButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toStartOf="@id/stop"
-        app:layout_constraintBottom_toBottomOf="@id/stop"
-        app:layout_constraintTop_toTopOf="@id/stop"
+        app:layout_constraintEnd_toStartOf="@id/start_stopButton"
+        app:layout_constraintBottom_toBottomOf="@id/start_stopButton"
+        app:layout_constraintTop_toTopOf="@id/start_stopButton"
         android:layout_marginEnd="48dp"
-        android:contentDescription="@string/replay_button" />
+        android:contentDescription="@string/replay_button"
+        android:src="@drawable/ic_pause"
+        android:scaleType="fitXY"
+        app:maxImageSize="30dp"
+        app:fabCustomSize="70dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
